# petition

./: .env.production.example  .gitignore  DEPLOY_ADLFRONT_HOSTINGER.md  README.md  docker-compose.yml
apps/: README.md
docs/: README.md
services/petition-api/: Cargo.toml  Dockerfile
services/petition-api/migrations/: 001_create_admin_users.sql  002_create_petitions.sql  003_create_signatures.sql  004_create_otp_audit.sql  005_add_petition_image_url.sql  006_add_petition_image.sql  007_add_petition_goal.sql
services/petition-api/src/: config.rs  main.rs  state.rs
services/petition-api/src/application/: mod.rs
services/petition-api/src/application/admin/: create.rs  login.rs  mod.rs
services/petition-api/src/application/otp/: mod.rs  request.rs  verify.rs
services/petition-api/src/application/petition/: get.rs  list.rs  mod.rs
services/petition-api/src/application/signature/: mod.rs  sign.rs
services/petition-api/src/domain/: admin.rs  errors.rs  mod.rs  otp.rs  petition.rs  signature.rs
services/petition-api/src/infrastructure/: mod.rs
services/petition-api/src/infrastructure/cache/: mod.rs  redis.rs
services/petition-api/src/infrastructure/crypto/: bcrypt.rs  jwt.rs
services/petition-api/src/infrastructure/db/: mod.rs  postgres.rs
services/petition-api/src/infrastructure/sms/: mock.rs  mod.rs  msg91.rs  twilio.rs
services/petition-api/src/infrastructure/workers/: count_sync.rs  mod.rs  otp_sender.rs
services/petition-api/src/presentation/: errors.rs  mod.rs  security.rs
services/petition-api/src/presentation/dto/: mod.rs
(+61 files in other folders)
