[package]
name = "petition-api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum            = { version = "0.7", features = ["macros"] }
tokio           = { version = "1",   features = ["full"] }
tower           = { version = "0.4", features = ["timeout", "limit"] }
tower-http      = { version = "0.5", features = ["cors", "trace"] }
sqlx            = { version = "0.7", features = ["postgres", "runtime-tokio", "uuid", "time", "ipnetwork"] }
deadpool-redis  = "0.14"
redis           = { version = "0.24", features = ["tokio-comp"] }
reqwest         = { version = "0.11", features = ["json"] }
serde           = { version = "1",   features = ["derive"] }
serde_json      = "1"
jsonwebtoken    = "9"
bcrypt          = "0.15"
uuid            = { version = "1",   features = ["v4", "serde"] }
rand            = "0.8"
tracing         = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy         = "0.15"
time            = { version = "0.3", features = ["serde", "formatting", "parsing"] }
ipnetwork       = { version = "0.20", features = ["serde"] } # For INET parsing in PostgreSQL
async-trait     = "0.1"
sha2            = "0.10"
hmac            = "0.12"
base64          = "0.21"
hex             = "0.4"
